syntax = "proto3";

package Need4Protocol;

message ActionResponse {
	int32 result = 1;
}

message ActionDetails {
	int32 id = 1;
	string name = 2;
	string description = 3;
	string category = 4;
}
